--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Para Yareni</title>
   <style>
-    body, html {
+    html, body {
       margin: 0;
       padding: 0;
       overflow: hidden;
       background: black;
       font-family: 'Poppins', sans-serif;
+    }
+
+    canvas {
+      display: block;
     }
 
     #scrollContainer {
@@ -32,24 +36,24 @@
 
     #inicio {
       position: absolute;
-      top: 0;
-      left: 0;
       width: 100vw;
       height: 100vh;
-      background: black;
+      top: 0;
+      left: 0;
+      background: rgba(0, 0, 0, 0.9);
+      z-index: 999;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       flex-direction: column;
-      z-index: 100;
     }
 
     #empezarBtn {
-      padding: 20px 50px;
+      padding: 20px 60px;
       font-size: 24px;
-      border: none;
-      border-radius: 15px;
       color: white;
+      border: none;
+      border-radius: 20px;
       font-weight: bold;
       background: linear-gradient(45deg, #ff4da6, #ff00ff, #ff8080);
       background-size: 300% 300%;
@@ -79,7 +83,30 @@
   <script>
     let musica;
     let particulas = [];
-    let mostrarTodo = false;
+    let iniciarAnimacion = false;
+    let frases = ["Hola Yareni ;)", "Feliz cumpleaños"];
+    let clickCount = 0;
+    let fraseIndex = 0;
+    let gotas = [];
+    let mostrarDedicatoria = false;
+    let mensajeFinalizado = false;
+
+    let textoBase = "Hola Yareni ;) ... Que tal, espero que estés bien ... Hace unos meses que no nos vemos pero en fin, sé que no nos conocemos muy bien que digamos y solo hablamos un par de veces pero en ese poco tiempo me agradaste bastante de verdad ... Y bueno jajaja ... Espero te haya gustado el código que te hice :) ... Se te quiere Se te extraña ... Jajaja ... Bueno la verdad sí se te extraña, ojalá tener la oportunidad de conocernos más muy pronto ... Atte Caleb ... Por cierto hace mucho que no hacía una carta o algo de ese estilo ...";
+    let textoVisible = "";
+    let indexLetra = 0;
+    let tiempoEscritura = 0;
+    let velocidadEscritura = 100;
+    let borrando = false;
+    let borrarDesde = null;
+    let esperando = false;
+    let tiempoEspera = 0;
+    let borrandoFinal = false;
+    let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"];
+
+    let partesABorrar = [
+      { texto: "Se te quiere", borrado: false },
+      { texto: "Se te extraña", borrado: false }
+    ];
 
     function preload() {
       musica = loadSound("take-on-me.mp3");
@@ -87,11 +114,10 @@
 
     function setup() {
       createCanvas(windowWidth, windowHeight);
-      textFont('Poppins');
+      textSize(26);
       textAlign(CENTER, CENTER);
-      textSize(24);
+      textFont('Poppins');
 
-      // crear partículas desde el principio
       for (let i = 0; i < 150; i++) {
         particulas.push({
           x: random(width),
@@ -104,7 +130,8 @@
 
       document.getElementById("empezarBtn").addEventListener("click", () => {
         document.getElementById("inicio").style.display = "none";
-        mostrarTodo = true;
+        iniciarAnimacion = true;
+        userStartAudio(); // Necesario para dispositivos móviles
         if (!musica.isPlaying()) {
           musica.loop();
         }
@@ -112,9 +139,9 @@
     }
 
     function draw() {
-      background(0);
+      background(0, 100);
 
-      // Partículas siempre visibles (inicio y luego fondo)
+      // Fondo de partículas siempre
       for (let p of particulas) {
         fill(p.color);
         noStroke();
@@ -126,14 +153,134 @@
         }
       }
 
-      // Si ya empezó, entonces ejecuta el resto
-      if (mostrarTodo) {
-        // Aquí puedes agregar todo tu código de animación:
-        // lluvia de frases, clics, dedicatoria, etc.
-
-        // Ejemplo temporal:
+      if (iniciarAnimacion) {
+        // Contador de clics
         fill(255);
-        text("¡Animación iniciada!", width / 2, height / 2);
+        textSize(20);
+        textAlign(LEFT, TOP);
+        text("Clics: " + clickCount, 20, 20);
+
+        // Lluvia de frases
+        if (!mostrarDedicatoria) {
+          textAlign(CENTER, CENTER);
+          textSize(24);
+          if (frameCount % 8 === 0) {
+            let x = random(width);
+            let y = -30;
+            let speed = random(2, 4);
+            gotas.push({
+              x: x,
+              y: y,
+              speed: speed,
+              alpha: 255,
+              texto: frases[fraseIndex],
+              explosion: false
+            });
+          }
+
+          for (let i = gotas.length - 1; i >= 0; i--) {
+            let g = gotas[i];
+            let color = random(coloresTexto);
+            fill(color + hex(g.alpha, 2));
+            text(g.texto, g.x, g.y);
+
+            if (g.explosion) {
+              g.x += g.dx;
+              g.y += g.dy;
+              g.alpha -= 5;
+            } else {
+              g.y += g.speed;
+              g.alpha -= 1.5;
+            }
+
+            if (g.alpha <= 0 || g.y > height + 50) {
+              gotas.splice(i, 1);
+            }
+          }
+        }
+
+        // Dedicatoria
+        if (mostrarDedicatoria && !borrandoFinal) {
+          if (!borrando && !esperando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
+            textoVisible += textoBase[indexLetra];
+            indexLetra++;
+            tiempoEscritura = millis();
+          }
+
+          for (let parte of partesABorrar) {
+            if (!parte.borrado && textoVisible.includes(parte.texto)) {
+              borrarDesde = textoVisible.lastIndexOf(parte.texto);
+              tiempoEspera = millis();
+              parte.borrado = true;
+              esperando = true;
+              break;
+            }
+          }
+
+          if (esperando && millis() - tiempoEspera >= 1300) {
+            borrando = true;
+            esperando = false;
+          }
+
+          if (borrando && millis() - tiempoEscritura > velocidadEscritura) {
+            textoVisible = textoVisible.slice(0, textoVisible.length - 1);
+            tiempoEscritura = millis();
+            if (textoVisible.length <= borrarDesde) {
+              borrando = false;
+            }
+          }
+
+          if (!borrando && indexLetra >= textoBase.length && !esperando && !mensajeFinalizado) {
+            mensajeFinalizado = true;
+            setTimeout(() => {
+              borrandoFinal = true;
+              indexLetra = textoVisible.length;
+            }, 1000);
+          }
+
+          if (borrandoFinal && millis() - tiempoEscritura > velocidadEscritura) {
+            textoVisible = textoVisible.substring(1);
+            tiempoEscritura = millis();
+          }
+
+          let dedicatoriaHTML = "";
+          for (let c of textoVisible) {
+            let color = random(coloresTexto);
+            dedicatoriaHTML += `<span style="color:${color}">${c}</span>`;
+          }
+          document.getElementById("dedicatoria").innerHTML = dedicatoriaHTML;
+        }
+      }
+    }
+
+    function mousePressed() {
+      if (iniciarAnimacion && !mostrarDedicatoria) {
+        clickCount++;
+        if (clickCount % 2 === 0) {
+          fraseIndex = (fraseIndex + 1) % frases.length;
+          for (let g of gotas) {
+            g.texto = frases[fraseIndex];
+          }
+        }
+        if (clickCount >= 30) {
+          mostrarDedicatoria = true;
+          document.getElementById("scrollContainer").style.pointerEvents = "auto";
+        }
+
+        // Explosión
+        for (let i = 0; i < 20; i++) {
+          let ang = random(TWO_PI);
+          let speed = random(2, 6);
+          gotas.push({
+            x: mouseX,
+            y: mouseY,
+            dx: cos(ang) * speed,
+            dy: sin(ang) * speed,
+            texto: frases[fraseIndex],
+            alpha: 255,
+            explosion: true
+          });
+        }
       }
     }
 
