--- a/index.html
+++ b/index.html
@@ -2,21 +2,17 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>Para Yareni</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
       overflow: hidden;
       background: black;
+      color: white;
       font-family: 'Poppins', sans-serif;
     }
-
-    canvas {
-      display: block;
-    }
-
     #scrollContainer {
       position: absolute;
       top: 0;
@@ -25,83 +21,60 @@
       height: 100vh;
       overflow-y: auto;
       pointer-events: none;
-      z-index: 10;
+      z-index: 1;
     }
-
     #dedicatoria {
       padding: 40px;
       font-size: 20px;
       white-space: pre-wrap;
     }
-
-    #inicio {
+    canvas {
+      display: block;
       position: absolute;
-      width: 100vw;
-      height: 100vh;
       top: 0;
       left: 0;
-      background: rgba(0, 0, 0, 0.9);
-      z-index: 999;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+      z-index: 0;
     }
-
-    #empezarBtn {
-      padding: 20px 60px;
+    #startButton {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 20px 40px;
       font-size: 24px;
       color: white;
       border: none;
       border-radius: 20px;
-      font-weight: bold;
-      background: linear-gradient(45deg, #ff4da6, #ff00ff, #ff8080);
-      background-size: 300% 300%;
-      animation: prism 3s ease infinite;
       cursor: pointer;
+      font-weight: bold;
+      z-index: 2;
+      background: linear-gradient(45deg, #ff4da6, #ff00ff, #ff8080, #ff4da6);
+      background-size: 600% 600%;
+      animation: prism 5s ease infinite;
     }
-
     @keyframes prism {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
 </head>
 <body>
-
-  <div id="inicio">
-    <button id="empezarBtn">EMPEZAR</button>
-  </div>
-
+  <button id="startButton">EMPEZAR</button>
   <div id="scrollContainer">
     <div id="dedicatoria"></div>
   </div>
 
   <script>
-    let musica;
-    let particulas = [];
-    let iniciarAnimacion = false;
-    let frases = ["Hola Yareni ;)", "Feliz cumpleaños"];
-    let clickCount = 0;
-    let fraseIndex = 0;
-    let gotas = [];
-    let mostrarDedicatoria = false;
-    let mensajeFinalizado = false;
-
-    let textoBase = "Hola Yareni ;) ... Que tal, espero que estés bien ... Hace unos meses que no nos vemos pero en fin, sé que no nos conocemos muy bien que digamos y solo hablamos un par de veces pero en ese poco tiempo me agradaste bastante de verdad ... Y bueno jajaja ... Espero te haya gustado el código que te hice :) ... Se te quiere Se te extraña ... Jajaja ... Bueno la verdad sí se te extraña, ojalá tener la oportunidad de conocernos más muy pronto ... Atte Caleb ... Por cierto hace mucho que no hacía una carta o algo de ese estilo ...";
-    let textoVisible = "";
-    let indexLetra = 0;
-    let tiempoEscritura = 0;
-    let velocidadEscritura = 100;
-    let borrando = false;
-    let borrarDesde = null;
-    let esperando = false;
-    let tiempoEspera = 0;
-    let borrandoFinal = false;
+    let gotas = [], particulas = [], frases = ["Hola Yareni ;)", "Feliz cumpleaños"];
     let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"];
+    let clickCount = 0, fraseIndex = 0;
+    let mostrarDedicatoria = false, mensajeFinalizado = false, borrandoFinal = false;
+    let textoBase = "Hola Yareni ;) ... Que tal, espero que estés bien ... Hace unos meses que no nos vemos pero en fin, sé que no nos conocemos muy bien que digamos y solo hablamos un par de veces pero en ese poco tiempo me agradaste bastante de verdad ... Y bueno jajaja ... Espero te haya gustado el código que te hice :) ... Se te quiere Se te extraña ... Jajaja ... Bueno la verdad sí se te extraña, ojalá tener la oportunidad de conocernos más muy pronto ... Atte Caleb ... Por cierto hace mucho que no hacía una carta o algo de ese estilo ...";
+    let textoVisible = "", indexLetra = 0, tiempoEscritura = 0, velocidadEscritura = 100;
+    let borrando = false, borrarDesde = null, esperando = false, tiempoEspera = 0;
+    let cancion, iniciado = false;
 
     let partesABorrar = [
       { texto: "Se te quiere", borrado: false },
@@ -109,43 +82,69 @@
     ];
 
     function preload() {
-      musica = loadSound("take-on-me.mp3");
+      soundFormats('mp3');
+      cancion = loadSound('take-on-me.mp3');
     }
 
     function setup() {
       createCanvas(windowWidth, windowHeight);
-      textSize(26);
-      textAlign(CENTER, CENTER);
       textFont('Poppins');
+      textAlign(CENTER, CENTER);
+      textSize(24);
 
-      for (let i = 0; i < 150; i++) {
+      for (let i = 0; i < 100; i++) {
         particulas.push({
           x: random(width),
           y: random(height),
-          size: random(1, 4),
-          speed: random(0.5, 1.5),
-          color: color(random(200, 255), random(50, 150), random(150, 255))
+          speed: random(0.3, 1.5),
+          color: random(coloresTexto),
+          size: random(2, 4)
         });
       }
 
-      document.getElementById("empezarBtn").addEventListener("click", () => {
-        document.getElementById("inicio").style.display = "none";
-        iniciarAnimacion = true;
-        userStartAudio(); // Necesario para dispositivos móviles
-        if (!musica.isPlaying()) {
-          musica.loop();
-        }
+      document.getElementById("startButton").addEventListener("click", () => {
+        userStartAudio();
+        cancion.play();
+        iniciado = true;
+        document.getElementById("startButton").style.display = "none";
+        document.getElementById("scrollContainer").style.pointerEvents = "auto";
       });
+    }
+
+    function windowResized() {
+      resizeCanvas(windowWidth, windowHeight);
+    }
+
+    function mousePressed() {
+      if (!iniciado || mostrarDedicatoria) return;
+
+      clickCount++;
+      if (clickCount % 2 === 0) {
+        fraseIndex = (fraseIndex + 1) % frases.length;
+        for (let g of gotas) g.texto = frases[fraseIndex];
+      }
+      if (clickCount >= 30) mostrarDedicatoria = true;
+
+      for (let i = 0; i < 20; i++) {
+        let ang = random(TWO_PI), speed = random(2, 6);
+        gotas.push({
+          x: mouseX, y: mouseY,
+          dx: cos(ang) * speed,
+          dy: sin(ang) * speed,
+          texto: frases[fraseIndex],
+          alpha: 255, explosion: true
+        });
+      }
     }
 
     function draw() {
       background(0, 100);
 
-      // Fondo de partículas siempre
+      // Fondo de partículas
       for (let p of particulas) {
         fill(p.color);
         noStroke();
-        ellipse(p.x, p.y, p.size);
+        circle(p.x, p.y, p.size);
         p.y += p.speed;
         if (p.y > height) {
           p.y = 0;
@@ -153,139 +152,89 @@
         }
       }
 
-      if (iniciarAnimacion) {
-        // Contador de clics
-        fill(255);
-        textSize(20);
-        textAlign(LEFT, TOP);
-        text("Clics: " + clickCount, 20, 20);
+      if (!iniciado) return;
 
-        // Lluvia de frases
-        if (!mostrarDedicatoria) {
-          textAlign(CENTER, CENTER);
-          textSize(24);
-          if (frameCount % 8 === 0) {
-            let x = random(width);
-            let y = -30;
-            let speed = random(2, 4);
-            gotas.push({
-              x: x,
-              y: y,
-              speed: speed,
-              alpha: 255,
-              texto: frases[fraseIndex],
-              explosion: false
-            });
-          }
+      // Mostrar contador
+      fill(255);
+      textSize(20);
+      textAlign(LEFT, TOP);
+      text("Clics: " + clickCount, 20, 20);
 
-          for (let i = gotas.length - 1; i >= 0; i--) {
-            let g = gotas[i];
-            let color = random(coloresTexto);
-            fill(color + hex(g.alpha, 2));
-            text(g.texto, g.x, g.y);
-
-            if (g.explosion) {
-              g.x += g.dx;
-              g.y += g.dy;
-              g.alpha -= 5;
-            } else {
-              g.y += g.speed;
-              g.alpha -= 1.5;
-            }
-
-            if (g.alpha <= 0 || g.y > height + 50) {
-              gotas.splice(i, 1);
-            }
-          }
+      // Lluvia
+      if (!mostrarDedicatoria) {
+        textAlign(CENTER, CENTER);
+        textSize(24);
+        if (frameCount % 8 === 0) {
+          let x = random(width), y = -30, speed = random(2, 4);
+          gotas.push({ x, y, speed, alpha: 255, texto: frases[fraseIndex], explosion: false });
         }
 
-        // Dedicatoria
-        if (mostrarDedicatoria && !borrandoFinal) {
-          if (!borrando && !esperando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
-            textoVisible += textoBase[indexLetra];
-            indexLetra++;
-            tiempoEscritura = millis();
+        for (let i = gotas.length - 1; i >= 0; i--) {
+          let g = gotas[i];
+          fill(random(coloresTexto) + hex(g.alpha, 2));
+          text(g.texto, g.x, g.y);
+
+          if (g.explosion) {
+            g.x += g.dx;
+            g.y += g.dy;
+            g.alpha -= 5;
+          } else {
+            g.y += g.speed;
+            g.alpha -= 1.5;
           }
 
-          for (let parte of partesABorrar) {
-            if (!parte.borrado && textoVisible.includes(parte.texto)) {
-              borrarDesde = textoVisible.lastIndexOf(parte.texto);
-              tiempoEspera = millis();
-              parte.borrado = true;
-              esperando = true;
-              break;
-            }
-          }
-
-          if (esperando && millis() - tiempoEspera >= 1300) {
-            borrando = true;
-            esperando = false;
-          }
-
-          if (borrando && millis() - tiempoEscritura > velocidadEscritura) {
-            textoVisible = textoVisible.slice(0, textoVisible.length - 1);
-            tiempoEscritura = millis();
-            if (textoVisible.length <= borrarDesde) {
-              borrando = false;
-            }
-          }
-
-          if (!borrando && indexLetra >= textoBase.length && !esperando && !mensajeFinalizado) {
-            mensajeFinalizado = true;
-            setTimeout(() => {
-              borrandoFinal = true;
-              indexLetra = textoVisible.length;
-            }, 1000);
-          }
-
-          if (borrandoFinal && millis() - tiempoEscritura > velocidadEscritura) {
-            textoVisible = textoVisible.substring(1);
-            tiempoEscritura = millis();
-          }
-
-          let dedicatoriaHTML = "";
-          for (let c of textoVisible) {
-            let color = random(coloresTexto);
-            dedicatoriaHTML += `<span style="color:${color}">${c}</span>`;
-          }
-          document.getElementById("dedicatoria").innerHTML = dedicatoriaHTML;
+          if (g.alpha <= 0 || g.y > height + 50) gotas.splice(i, 1);
         }
       }
-    }
 
-    function mousePressed() {
-      if (iniciarAnimacion && !mostrarDedicatoria) {
-        clickCount++;
-        if (clickCount % 2 === 0) {
-          fraseIndex = (fraseIndex + 1) % frases.length;
-          for (let g of gotas) {
-            g.texto = frases[fraseIndex];
+      // Dedicatoria
+      if (mostrarDedicatoria && !borrandoFinal) {
+        if (!borrando && !esperando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
+          textoVisible += textoBase[indexLetra];
+          indexLetra++;
+          tiempoEscritura = millis();
+        }
+
+        for (let parte of partesABorrar) {
+          if (!parte.borrado && textoVisible.includes(parte.texto)) {
+            borrarDesde = textoVisible.lastIndexOf(parte.texto);
+            esperando = true;
+            tiempoEspera = millis();
+            parte.borrado = true;
+            break;
           }
         }
-        if (clickCount >= 30) {
-          mostrarDedicatoria = true;
-          document.getElementById("scrollContainer").style.pointerEvents = "auto";
+
+        if (esperando && millis() - tiempoEspera >= 1300) {
+          borrando = true;
+          esperando = false;
         }
 
-        // Explosión
-        for (let i = 0; i < 20; i++) {
-          let ang = random(TWO_PI);
-          let speed = random(2, 6);
-          gotas.push({
-            x: mouseX,
-            y: mouseY,
-            dx: cos(ang) * speed,
-            dy: sin(ang) * speed,
-            texto: frases[fraseIndex],
-            alpha: 255,
-            explosion: true
-          });
+        if (borrando && millis() - tiempoEscritura > velocidadEscritura) {
+          textoVisible = textoVisible.slice(0, textoVisible.length - 1);
+          tiempoEscritura = millis();
+          if (textoVisible.length <= borrarDesde) borrando = false;
         }
+
+        if (!borrando && indexLetra >= textoBase.length && !esperando && !mensajeFinalizado) {
+          mensajeFinalizado = true;
+          setTimeout(() => {
+            borrandoFinal = true;
+            indexLetra = textoVisible.length;
+          }, 1000);
+        }
+
+        if (borrandoFinal && millis() - tiempoEscritura > velocidadEscritura) {
+          textoVisible = textoVisible.substring(1);
+          tiempoEscritura = millis();
+        }
+
+        let dedicatoriaHTML = "";
+        for (let c of textoVisible) {
+          dedicatoriaHTML += `<span style="color:${random(coloresTexto)}">${c}</span>`;
+        }
+        document.getElementById("dedicatoria").innerHTML = dedicatoriaHTML;
       }
-    }
-
-    function windowResized() {
-      resizeCanvas(windowWidth, windowHeight);
     }
   </script>
 </body>
